--- a/prototype/index_live.html
+++ b/prototype/index_live.html
@@ -38,6 +38,13 @@
         .status-pill.paused span:last-child { color: #f59e0b; }
         .status-pill.paused .pulse-dot { background: #f59e0b; animation: none; }
 
+        .status-pill.terminated {
+            background: rgba(239, 68, 68, 0.2);
+            border-color: rgba(239, 68, 68, 0.4);
+        }
+        .status-pill.terminated span:last-child { color: #ef4444; }
+        .status-pill.terminated .pulse-dot { background: #ef4444; animation: none; }
+
         .timeline-item .text.draft {
             color: rgba(255, 255, 255, 0.6);
             font-style: italic;
