Fixed AI Chat Display

--- a/prototype/index_live.html
+++ b/prototype/index_live.html
@@ -374,6 +374,8 @@
         </div>
     </aside>
 
+    <script src="vendor/marked.min.js"></script>
+    <script src="vendor/dompurify.min.js"></script>
     <script src="app_live.js"></script>
 </body>
 </html>
